# LibCMaker_zlib

./: .appveyor.yml  .travis.yml  README.md  cmr_build_zlib.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_zlib.cmake  cmr_find_package_zlib.cmake  cmr_get_download_params_zlib.cmake
cmake/modules/: FindZLIB.cmake
patch/zlib-1.2.11/: CMakeLists.txt
patch/zlib-1.2.8/: CMakeLists.txt
samples/TestCompileWithzlib/: CMakeLists.txt  README.md  run-build-android.sh  run-build.sh
samples/TestCompileWithzlib/src/: example.c  example_test.c  example_test.h  example_test_to_gtest.cpp
samples/TestCompileWithzlib/test/: CMakeLists.txt
